--- a/frontend/my-react-app/src/App.css
+++ b/frontend/my-react-app/src/App.css
@@ -1,10 +1,10 @@
-@import "tailwindcss";
 
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  z-index: 1;
 }
 
 @keyframes logo-spin {
@@ -28,4 +28,11 @@
 
 .read-the-docs {
   color: #888;
+}
+
+table{
+  border-radius: 20px;
+}
+thead{
+  color: Red;
 }
