--- a/frontend/my-react-app/src/assets/MyPopup.css
+++ b/frontend/my-react-app/src/assets/MyPopup.css
@@ -1,3 +1,12 @@
 .modal-content{
     transition: all 0.3s ease;
 }
+.modal-content{
+    background-color: white;
+}
+
+.popup-content{
+    background: transparent;
+    border: none;
+
+}
