--- a/frontend/my-react-app/src/assets/SideBar-light.css
+++ b/frontend/my-react-app/src/assets/SideBar-light.css
@@ -25,6 +25,12 @@ body{
     box-shadow: 2px 0 15px rgba(0, 0, 0, 0.1);
         z-index: 3;
 }
+.logo-details img {
+    max-width: 100%;
+    height: 34px;
+    margin: auto;
+    vertical-align: middle;
+}
 .home-section {
     position: relative;
     min-height: 100vh;
