Login UI Updated

--- a/frontend/my-react-app/src/assets/SideBar-light.css
+++ b/frontend/my-react-app/src/assets/SideBar-light.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #4a48ac;
+    --primary-color: #304674;
     --secondary-color: #6c757d;
     --light-bg: #f8f9fa;
     --dark-text: #333;
