Frontend Changes on side bar and login

--- a/frontend/my-react-app/src/assets/Dashboard.css
+++ b/frontend/my-react-app/src/assets/Dashboard.css
@@ -1,4 +1,4 @@
-.card-body {
+/* .card-body {
     a {
         text-decoration: none;
     }
@@ -51,4 +51,4 @@
   .table-responsive.attendnace {
     overflow: visible !important;
   }
-  
+   */
