--- a/frontend/my-react-app/src/assets/SideBar-light.css
+++ b/frontend/my-react-app/src/assets/SideBar-light.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
     --primary-color: #304674;
     --secondary-color: #6c757d;
     --light-bg: #f8f9fa;
@@ -267,4 +267,4 @@ ol, ul {
   .sidebar .nav-list li .nav-link.active i,
   .sidebar .nav-list li .nav-link.active .links-name {
     color: white;
-  }
+  } */
