--- a/frontend/my-react-app/src/App.css
+++ b/frontend/my-react-app/src/App.css
@@ -1,11 +1,11 @@
-
+/* 
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
   z-index: 1;
-  font-family: 'Roboto';
+  font-family: 'Poppins', sans-serif;
 }
 
 @keyframes logo-spin {
@@ -36,4 +36,4 @@ table{
 }
 thead{
   color: Red;
-}
+} */
