--- a/frontend/my-react-app/src/assets/Register.css
+++ b/frontend/my-react-app/src/assets/Register.css
@@ -1,7 +1,9 @@
-body {
+/* body {
     color: #000;
     overflow-x: hidden;
     height: 100%;
+    font-family: "poppins";
+    
     background-repeat: no-repeat;
     background-size: 100% 100%
 }
@@ -63,4 +65,4 @@ button:focus {
     box-shadow: none !important;
     outline-width: 0
 }
-
+ */
