--- a/frontend/my-react-app/src/assets/MyPopup.css
+++ b/frontend/my-react-app/src/assets/MyPopup.css
@@ -1,4 +1,4 @@
-/* .modal-content{
+.modal-content{
     transition: all 0.3s ease;
 }
 .modal-content{
@@ -9,4 +9,4 @@
     background: transparent;
     border: none;
 
-} */
+}
