--- a/frontend/my-react-app/src/assets/SideBar-light.css
+++ b/frontend/my-react-app/src/assets/SideBar-light.css
@@ -229,7 +229,7 @@
     background-color: #F5F7FF;
 }
 
-.sidebar.open ~ .home-section {
+.sidebar.open~.home-section {
     left: 250px;
     width: calc(100% - 250px);
 }
@@ -246,29 +246,31 @@
     background: #ecf2fe;
 
 }
-  
+
 .sidebar .nav-list li .nav-link.active i,
 .sidebar .nav-list li .nav-link.active .links-name {
     color: #5976fc;
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
     .sidebar {
-        width: 0;
+        width: 78px;
         overflow: hidden;
+
     }
-    
+
     .sidebar.open {
         width: 250px;
+
     }
-    
+
     .home-section {
-        left: 0;
+        left: 78px;
         width: 100%;
     }
-    
-    .sidebar.open ~ .home-section {
-        left: 250px;
-        width: calc(100% - 250px);
-    }
-}
+
+    .sidebar.open~.home-section {
+        left: 78px;
+        width: calc(100% - 78px);
+        background: rgba(0, 0, 0, 0.4)
+    } */
